# src/controllers/leadController.js
@@ -20,6 +20,30 @@ async function createLead(req, res) {
   }
 }
 
+async function assignLead(req, res) {
+  try {
+    const { leadId } = req.params; // Send lead id in the URL
+
+    if (!req.body || !req.body.salesAgentId) {
+      return res
+        .status(400)
+        .json({ message: 'Sales Agent ID is required in the request body.' });
+    }
+
+    const { salesAgentId } = req.body;
+
+    const updatedLead = await leadService.assignLead(leadId, salesAgentId);
+
+    res
+      .status(200)
+      .json({ message: 'Lead assigned successfully.', lead: updatedLead });
+  } catch (error) {
+    console.error('Error assigning lead:', error);
+    res.status(400).json({ message: error.message });
+  }
+}
+
 module.exports = {
   createLead,
+  assignLead,
 };
