# src/routes/leadRoute.js
@@ -5,6 +5,7 @@ const {
   validateLeadCreation,
   handleValidationErrors,
 } = require('../middlewares/validations/leadValidation');
+const roleCheck = require('../middlewares/roleCheck');
 
 // Route for creating leads (public)
 router.post(
@@ -13,5 +14,8 @@ router.post(
   handleValidationErrors,
   leadController.createLead
 );
+
+// Route for assigning leads (Admins only)
+router.post('/:leadId/assign', roleCheck(['admin']), leadController.assignLead);
 
 module.exports = router;
